@@ -959,7 +959,7 @@ Titles and Help for the System Fields
     <epp:phrase id="document_fieldname_security">Visible to</epp:phrase>
     <epp:phrase id="document_fieldhelp_security">Please indicate the required "security level" of this document. Who is allowed to download it?</epp:phrase>
     <epp:phrase id="document_fieldname_license">License</epp:phrase>
-    <epp:phrase id="document_fieldhelp_license">Specify an explicit license for this document (does not effect the access rights you grant at the end of this deposit process).</epp:phrase>
+    <epp:phrase id="document_fieldhelp_license">Specify an explicit license for this document (does not effect the access rights you grant at the end of this deposit process). This repository allows <a href="http://creativecommons.org/about/licenses/">Creative Commons</a> licenses.</epp:phrase>
     <epp:phrase id="document_fieldname_date_embargo">Embargo expiry date</epp:phrase>
     <epp:phrase id="document_fieldhelp_date_embargo">The date that a publisher- or sponsor-imposed embargo expires. On and after this date, this document will be made publically accessible.
 <br/>Example: <span class="ep_form_example">2006 - all documents made publically accessible on 1st January 2006</span>
@@ -1180,7 +1180,7 @@ Titles and Help for the System Fields
 	<!-- Upload component -->
 	
 	<epp:phrase id="Plugin/InputForm/Component/Upload:title">Document upload</epp:phrase>
-	<epp:phrase id="Plugin/InputForm/Component/Upload:help"><a href="http://www.sherpa.ac.uk/romeo.php">Use SHERPA Romeo to check publisher policies</a></epp:phrase>
+        <epp:phrase id="Plugin/InputForm/Component/Upload:help"><p>To upload a document to this repository, click the Browse button below to select the file and the Upload button to upload it to the archive. You may then add additional files to the document (such as images for HTML files) or upload more files to create additional documents.</p><p>You may wish to use the <a href="http://www.sherpa.ac.uk/romeo.php">SHERPA RoMEo</a> tool to verify publisher policies before depositing.</p></epp:phrase>
 
 	<!-- errors -->
 	<epp:phrase id="Plugin/InputForm/Component/Upload:create_failed">Document creation failed.</epp:phrase>
